---------------------------------------------------------------------------------------------------
Version: 0.1.5
Date: 2025-04-16
  Info:
    - Now deals with electric generation and consumption, as well as heat generation.
---------------------------------------------------------------------------------------------------
Version: 0.1.4
Date: 2025-04-15
  Info:
    - Added the dependency_graph_lib_register_custom_callback global callback so mods can add their own custom requirements.
---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: 2025-04-14
  Info:
    - Now correctly deals with entities with non-electric energy_sources and burner properties.
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 2025-04-13
  Info:
    - Now correctly deals with entities with in or output fluid boxes with filters.
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 2025-04-13
  Info:
    - No longer uses data.raw directly, but instead takes data_raw as a parameter.
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 2025-04-13
  Info:
    - Inital Release. A lot of dependencies are not yet part of the generated graph.