@@ -201,8 +201,8 @@ function (object, requirement_nodes, object_nodes)
     --         self:add_dependency(nodes, node_types.entity_node, 1, "requires any rail prototype", entity_verbs.requires_rail)
     --     end
     
-    --     if entity.autoplace then
-    --         self:add_disjunctive_dependency(nodes, node_types.autoplace_control_node, entity.autoplace.control, "autoplace control", "configure")
-    --     end
+    if entity.autoplace then
+        object_node_functor:reverse_add_fulfiller_for_object_requirement(object, entity_requirements.instantiate, entity.autoplace.control or entity.name, object_types.autoplace_control, object_nodes)
+    end
 end)
 return entity_functor
